--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
               integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
         <link rel="stylesheet" href="css/style.css" type="text/css"/>
     </head>
 
     <body>
-        <header id="site-header">
+        <header id="header" class="header">
             <nav class="navbar navbar-expand navbar-light col-12 col-md-8 offset-md-2">
                 <div class="container-fluid">
                     <a class="navbar-brand mb-0 h1" href="#">Cookbook</a>
-
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="html/recipes/all-recipes.html">All Recipes</a>
+                            <a class="nav-link" href="html/collection/all-recipes.html">All Recipes</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -40,24 +40,30 @@
 
         <!-- Home Slider -->
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-            <div class="container-fluid">
-                <div class="carousel-inner">
-
+            <div class="carousel-inner">
+                <div class="container-fluid">
                     <div class="carousel-item active align-middle" data-bs-interval="10000">
                         <img src="images/banana-pancakes.jpg" class="d-block w-100" alt="Banana Pancakes">
                         <div class="carousel-caption d-none d-sm-block top-50">
-                            <a href="/collection/breakfast-recipes/" class="recipe-type">Breakfast Recipe</a>
-                            <h1>Banana Pancakes</h1>
-                            <button type="button" class="btn-lg btn-info">View Recipe</button>
+                            <a href="html/recipes/banana-pancakes.html" class="recipe-type">Breakfast Recipe</a>
+                            <h1 class="carousel-recipe">Banana Pancakes</h1>
+                            <button type="button" class="btn-lg btn-info uppercase">
+                                <a href="html/recipes/banana-pancakes.html">
+                                    View Recipe
+                                </a>
+                            </button>
                         </div>
                     </div>
-
                     <div class="carousel-item align-middle" data-bs-interval="10000">
                         <img src="images/pesto-chicken-linguini.jpeg" class="d-block w-100" alt="Pesto Chicken Linguini">
                         <div class="carousel-caption d-none d-sm-block top-50">
-                            <a href="/collection/lunch-recipes/" class="recipe-type">Lunch Recipe</a>
-                            <h1>Pesto Chicken Linguini</h1>
-                            <button type="button" class="btn-lg btn-info">View Recipe</button>
+                            <a href="/html/collection/lunch/" class="recipe-type">Lunch Recipe</a>
+                            <h1 class="carousel-recipe">Pesto Chicken Linguini</h1>
+                            <button type="button" class="btn-lg btn-info uppercase">
+                                <a href="html/recipes/pesto-chicken-linguini.html">
+                                    View Recipe
+                                </a>
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -79,7 +85,7 @@
             <div class="container-fluid">
                 <div class="row justify-content-center">
                     <div class="col-8">
-                        <h2>This Week’s Top Recipes</h2>
+                        <h2 class="heading">This Week’s Top Recipes</h2>
                         <p>Check out this week’s most popular dishes.</p>
                     </div>
                 </div>
@@ -103,18 +109,36 @@
         </div>
 
         <footer id="footer" class="footer">
-            <nav class="navbar navbar-expand navbar-light col-12 col-md-8 offset-md-2">
-                <div class="container-fluid">
+            <div id="footer-widgets" class="footer-widgets row col-12 col-md-8 offset-md-2">
+                <div class="col">
+                    <p class="uppercase">About this site</p>
                     <ul class="navbar-nav">
-                        <li class="nav-item">
+                        <li class="nav-item footer">
                             <a href="#" class="footer-text">Privacy Policy</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item footer">
                             <a href="#" class="footer-text">Terms and Conditions</a>
                         </li>
                     </ul>
                 </div>
-            </nav>
+                <div class="col">
+                    <p class="uppercase">Join us on social</p>
+                    <ul class="navbar-nav">
+                        <li class="nav-item footer">
+                            <i class="bi bi-facebook"></i>
+                            <a href="#" class="footer-text">Like us on Facebook</a>
+                        </li>
+                        <li class="nav-item footer">
+                            <i class="bi bi-youtube"></i>
+                            <a href="#" class="footer-text">Watch us on YouTube</a>
+                        </li>
+                        <li class="nav-item footer">
+                            <i class="bi bi-instagram"></i>
+                            <a href="#" class="footer-text">Follow us on Instagram</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
             <hr/>
             <div id="copyright" class="copyright col-12 col-md-8 offset-md-2">
                 <p>© 2021 Cookbook.</p>
