Fill grid with recipes

--- a/index.html
+++ b/index.html
@@ -82,27 +82,33 @@
 
         <!-- Top Recipe Grid -->
         <div id="top-recipe">
-            <div class="container-fluid">
-                <div class="row justify-content-center">
-                    <div class="col-8">
-                        <h2 class="heading">This Week’s Top Recipes</h2>
-                        <p>Check out this week’s most popular dishes.</p>
+            <div class="row col-12 col-md-8 offset-md-2 justify-content-center">
+                <div class="container-fluid">
+                    <div class="row">
+                        <h2 class="heading">All Recipes</h2>
+                        <p>Check out the most popular dishes.</p>
                     </div>
-                </div>
-                <div class="row justify-content-center">
-                    <!-- TODO -->
-                    <div class="col-2">
-                        <p>Lunch Recipe</p>
-                        <h6>Pesto Chicken Linguini</h6>
-                    </div>
-                    <div class="col-2">
-                        Recipe
-                    </div>
-                    <div class="col-2">
-                        Recipe
-                    </div>
-                    <div class="col-2">
-                        Recipe
+                    <div class="row recipes-grid">
+                        <div class="col-3">
+                            <img src="images/banana-pancakes.jpg" alt="Banana Pancakes" class="image-grid">
+                            <span class="recipe-type-grid">Breakfast Recipe</span>
+                            <h5><a href="html/recipes/banana-pancakes.html" class="recipe-name-grid">Banana Pancakes</a></h5>
+                        </div>
+                        <div class="col-3">
+                            <img src="images/banana-pancakes.jpg" alt="Banana Pancakes" class="image-grid">
+                            <span class="recipe-type-grid">Breakfast Recipe</span>
+                            <h5><a href="html/recipes/banana-pancakes.html" class="recipe-name-grid">Banana Pancakes</a></h5>
+                        </div>
+                        <div class="col-3">
+                            <img src="images/banana-pancakes.jpg" alt="Banana Pancakes" class="image-grid">
+                            <span class="recipe-type-grid">Breakfast Recipe</span>
+                            <h5><a href="html/recipes/banana-pancakes.html" class="recipe-name-grid">Banana Pancakes</a></h5>
+                        </div>
+                        <div class="col-3">
+                            <img src="images/banana-pancakes.jpg" alt="Banana Pancakes" class="image-grid">
+                            <span class="recipe-type-grid">Breakfast Recipe</span>
+                            <h5><a href="html/recipes/banana-pancakes.html" class="recipe-name-grid">Banana Pancakes</a></h5>
+                        </div>
                     </div>
                 </div>
             </div>
