Delete some files and their links

--- a/html/recipes/banana-pancakes.html
+++ b/html/recipes/banana-pancakes.html
@@ -17,10 +17,10 @@
         <header id="header" class="header">
             <nav class="navbar navbar-expand navbar-light col-12 col-md-8 offset-md-2">
                 <div class="container-fluid">
-                    <a class="navbar-brand mb-0 h1" href="#">Cookbook</a>
+                    <a class="navbar-brand mb-0 h1" href="../../index.html">Cookbook</a>
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="/html/collection/all-recipes.html">All Recipes</a>
+                            <a class="nav-link" href="../../index.html">All Recipes</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -47,7 +47,7 @@
                             <a href="../../index.html" class="breadcrumb-link">Home</a>
                         </li>
                         <li class="breadcrumb-item">
-                            <a href=../collection/breakfast/breakfast-recipes.html class="breadcrumb-link">Breakfast Recipes</a>
+                            <a href="#" class="breadcrumb-link">Breakfast Recipes</a>
                         </li>
                         <li class="breadcrumb-item active" aria-current="page">Banana Pancakes</li>
                     </ol>
