--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <a class="navbar-brand mb-0 h1" href="#">Cookbook</a>
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="html/collection/all-recipes.html">All Recipes</a>
+                            <a class="nav-link" href="#">All Recipes</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -45,7 +45,7 @@
                     <div class="carousel-item active align-middle" data-bs-interval="10000">
                         <img src="images/banana-pancakes.jpg" class="d-block w-100" alt="Banana Pancakes">
                         <div class="carousel-caption d-none d-sm-block top-50">
-                            <a href="html/recipes/banana-pancakes.html" class="recipe-type">Breakfast Recipe</a>
+                            <span class="recipe-type">Breakfast Recipe</span>
                             <h1 class="carousel-recipe">Banana Pancakes</h1>
                             <button type="button" class="btn-lg btn-info uppercase">
                                 <a href="html/recipes/banana-pancakes.html">
@@ -57,7 +57,7 @@
                     <div class="carousel-item align-middle" data-bs-interval="10000">
                         <img src="images/pesto-chicken-linguini.jpeg" class="d-block w-100" alt="Pesto Chicken Linguini">
                         <div class="carousel-caption d-none d-sm-block top-50">
-                            <a href="/html/collection/lunch/" class="recipe-type">Lunch Recipe</a>
+                            <span class="recipe-type">Lunch Recipe</span>
                             <h1 class="carousel-recipe">Pesto Chicken Linguini</h1>
                             <button type="button" class="btn-lg btn-info uppercase">
                                 <a href="html/recipes/pesto-chicken-linguini.html">
